--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "npm start --prefix server",
+    "client": "npm start --prefix client",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/fccJashCoda/LibraryApp#readme",
   "dependencies": {
+    "concurrently": "^6.2.0",
     "express-validator": "^6.12.0",
     "uuid": "^8.3.2"
   }
